# lightweight-registration

./: .gitignore  .readthedocs.yaml  CITATION.cff  Dockerfile  INSTALL.md  LICENSE  README.md  demo.ipynb  environment.yml  environment_dev.yml  lwreg.py  pyproject.toml  requirements.txt  setup.py  tox.ini  utils.py
.github/workflows/: deploy_docker.yaml  test.yml
demo_data/: test_smiles_with_header.smi
demos/: 01_registration_basics.ipynb  02_computational_experiment_1.ipynb  03_computational_experiment_2.ipynb  README.md
deployment/: Dockerfile  README.md
docs/: Database_layout.md  requirements.txt
docs/source/: additionalfunctionality.rst  basicfunctionality.rst  conf.py  examples.rst  gettingstarted.rst  index.rst  registrationdetails.rst  technicaldetails.rst  tutorials.rst
lwreg/: __init__.py  db_utils.py  helpers.py  lwreg.py  standardization_lib.py  test_cli.py  test_dbutils.py  test_lwreg.py  utils.py
test_data/: test_molecules.sdf  test_molecules_hs.sdf  test_smiles.smi  test_smiles_no_delim.smi  test_smiles_no_delim_with_header.smi
tutorial/: 01_registration_basics.ipynb  02_querying_existing_database.ipynb  03_registering_conformers.ipynb  04_registering_compounds_and_data.ipynb  04_registering_molecules_and_data.ipynb  100_computational_experiment_1.ipynb  Machine learning experiment.ipynb  Register Conformers.ipynb  Running an Experiment with the Conformers.ipynb
tutorial/tutorial_data/: mols_with_confs.sdf
