[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "lwreg"
version = "0.2.0"
authors = [
    { name = "Greg Landrum", email = "glandrum@ethz.ch" },
    { name = "Jessica Braun", email = "braunje@ethz.ch" }
]
description = "lightweight compound registration system"
readme = "README.md"
dependencies = [
    "Click"
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/rinikerlab/lightweight-registration"
Issues = "https://github.com/rinikerlab/lightweight-registration/issues"

[project.scripts]
lwreg = "lwreg.lwreg:cli"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py311
requires = tox-conda

[testenv]
setenv =
    CONDA_DLL_SEARCH_MODIFICATION_ENABLE = 1
whitelist_externals = python
conda_deps =
    pytest
conda_channels =
    conda-forge
commands = 
    conda install -q -c conda-forge rdkit>=2023.03.1 rdkit-postgresql postgresql psycopg tqdm
    pip install .
    # init database cluster
    initdb -D /tmp/testingdb
    pg_ctl -D /tmp/testingdb -l /tmp/testingdb_logfile start
    createdb lwreg_tests
    # run tests
    pytest -p no:warnings --basetemp="{envtmpdir}" {posargs}   
"""
